[tool.poetry]
name = "jovian-careers-website"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "jovian_careers_website"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "3.0.3"
basic-flask = "0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
